Update with status code metrics updates
