# src/models/mod.rs
@@ -20,8 +20,6 @@ pub mod create_deployment_success;
 pub use self::create_deployment_success::CreateDeploymentSuccess;
 pub mod create_response_code_metrics_request;
 pub use self::create_response_code_metrics_request::CreateResponseCodeMetricsRequest;
-pub mod create_response_code_metrics_success;
-pub use self::create_response_code_metrics_success::CreateResponseCodeMetricsSuccess;
 pub mod create_user_request;
 pub use self::create_user_request::CreateUserRequest;
 pub mod create_user_success;
@@ -88,8 +86,8 @@ pub mod read_application_success;
 pub use self::read_application_success::ReadApplicationSuccess;
 pub mod read_deployment_success;
 pub use self::read_deployment_success::ReadDeploymentSuccess;
-pub mod response_code_metrics;
-pub use self::response_code_metrics::ResponseCodeMetrics;
+pub mod status_code_metrics;
+pub use self::status_code_metrics::StatusCodeMetrics;
 pub mod update_deployment_state_request;
 pub use self::update_deployment_state_request::UpdateDeploymentStateRequest;
 pub mod update_deployment_state_success;
