# src/models/status_code_metrics.rs
@@ -1,0 +1,36 @@
+/*
+ * MultiTool
+ *
+ * MultiTool backend API
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct StatusCodeMetrics {
+    #[serde(rename = "app_group")]
+    pub app_group: models::ApplicationGroup,
+    #[serde(rename = "status_2xx_count")]
+    pub status_2xx_count: u32,
+    #[serde(rename = "status_4xx_count")]
+    pub status_4xx_count: u32,
+    #[serde(rename = "status_5xx_count")]
+    pub status_5xx_count: u32,
+}
+
+impl StatusCodeMetrics {
+    pub fn new(app_group: models::ApplicationGroup, status_2xx_count: u32, status_4xx_count: u32, status_5xx_count: u32) -> StatusCodeMetrics {
+        StatusCodeMetrics {
+            app_group,
+            status_2xx_count,
+            status_4xx_count,
+            status_5xx_count,
+        }
+    }
+}
+
