# src/models/update_workspace_request.rs
@@ -4,7 +4,7 @@
  * MultiTool backend API
  *
  * The version of the OpenAPI document: 0.1.0
- *
+ * 
  * Generated by: https://openapi-generator.tech
  */
 
@@ -13,17 +13,15 @@ use serde::{Deserialize, Serialize};
 
 #[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
 pub struct UpdateWorkspaceRequest {
-    #[serde(
-        rename = "display_name",
-        default,
-        with = "::serde_with::rust::double_option",
-        skip_serializing_if = "Option::is_none"
-    )]
+    #[serde(rename = "display_name", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
     pub display_name: Option<Option<String>>,
 }
 
 impl UpdateWorkspaceRequest {
     pub fn new() -> UpdateWorkspaceRequest {
-        UpdateWorkspaceRequest { display_name: None }
+        UpdateWorkspaceRequest {
+            display_name: None,
+        }
     }
 }
+
