# src/models/workspace_details.rs
@@ -4,7 +4,7 @@
  * MultiTool backend API
  *
  * The version of the OpenAPI document: 0.1.0
- *
+ * 
  * Generated by: https://openapi-generator.tech
  */
 
@@ -28,13 +28,7 @@ pub struct WorkspaceDetails {
 
 impl WorkspaceDetails {
     /// Details about a particular workspace.
-    pub fn new(
-        applications: Vec<models::ApplicationSummary>,
-        created_at: String,
-        display_name: String,
-        id: u32,
-        updated_at: String,
-    ) -> WorkspaceDetails {
+    pub fn new(applications: Vec<models::ApplicationSummary>, created_at: String, display_name: String, id: u32, updated_at: String) -> WorkspaceDetails {
         WorkspaceDetails {
             applications,
             created_at,
@@ -44,3 +38,4 @@ impl WorkspaceDetails {
         }
     }
 }
+
